@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
  
 @Service
 @RequiredArgsConstructor
@@ -28,12 +27,12 @@ public class ServiceService {
     public ServiceResponseDTO create(Long userId, ServiceCreateRequest request) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
- 
+
         Category category = null;
         if (request.getCategoryId() != null) {
             category = categoryRepository.findById(request.getCategoryId()).orElse(null);
         }
- 
+
         com.app.servicefinder.model.Service service = com.app.servicefinder.model.Service.builder()
                 .title(request.getTitle())
                 .description(request.getDescription())
@@ -47,18 +46,16 @@ public class ServiceService {
                 .isAvailable(true)
                 .viewsCount(0)
                 .build();
- 
+
         service = serviceRepository.save(service);
- 
+
         // Ajouter photos
         if (request.getPhotoUrls() != null) {
             final com.app.servicefinder.model.Service finalService = service;
-            request.getPhotoUrls().forEach(url -> {
-                photoRepository.save(ServicePhoto.builder()
-                        .photoUrl(url)
-                        .service(finalService)
-                        .build());
-            });
+            request.getPhotoUrls().forEach(url -> photoRepository.save(ServicePhoto.builder()
+                    .photoUrl(url)
+                    .service(finalService)
+                    .build()));
         }
         return mapToDTO(service);
     }
@@ -74,31 +71,61 @@ public class ServiceService {
  
     public List<ServiceResponseDTO> search(String keyword, String city, Long categoryId, Double maxPrice) {
         return serviceRepository.searchServices(keyword, city, categoryId, maxPrice)
-                .stream().map(this::mapToDTO).collect(Collectors.toList());
+                .stream().map(this::mapToDTO).toList();
     }
- 
+
     public List<ServiceResponseDTO> getByUser(Long userId) {
         return serviceRepository.findByUserId(userId)
-                .stream().map(this::mapToDTO).collect(Collectors.toList());
+                .stream().map(this::mapToDTO).toList();
     }
- 
+
     public List<ServiceResponseDTO> getByCategory(Long categoryId) {
         return serviceRepository.findByCategoryId(categoryId)
-                .stream().map(this::mapToDTO).collect(Collectors.toList());
+                .stream().map(this::mapToDTO).toList();
     }
  
     public void delete(Long serviceId, Long userId) {
         com.app.servicefinder.model.Service service = serviceRepository.findById(serviceId)
                 .orElseThrow(() -> new RuntimeException("Service non trouvé"));
         if (!service.getUser().getId().equals(userId)) {
-            throw new RuntimeException("Non autorisé");
+            throw new IllegalArgumentException("Non autorisé");
         }
         serviceRepository.delete(service);
     }
  
+    public ServiceResponseDTO updateService(Long serviceId, Long userId, ServiceCreateRequest request) {
+        com.app.servicefinder.model.Service service = serviceRepository.findById(serviceId)
+                .orElseThrow(() -> new RuntimeException("Service non trouvé"));
+        if (!service.getUser().getId().equals(userId)) {
+            throw new IllegalArgumentException("Non autorisé");
+        }
+ 
+        service.setTitle(request.getTitle());
+        service.setDescription(request.getDescription());
+        service.setPrice(request.getPrice());
+        service.setPriceType(request.getPriceType());
+        service.setCity(request.getCity());
+        service.setLatitude(request.getLatitude());
+        service.setLongitude(request.getLongitude());
+        if (request.getCategoryId() != null) {
+            service.setCategory(categoryRepository.findById(request.getCategoryId()).orElse(null));
+        }
+        com.app.servicefinder.model.Service savedService = serviceRepository.save(service);
+ 
+        if (request.getPhotoUrls() != null) {
+            photoRepository.deleteByServiceId(serviceId);
+            request.getPhotoUrls().forEach(url -> photoRepository.save(ServicePhoto.builder()
+                    .photoUrl(url)
+                    .service(savedService)
+                    .build()));
+        }
+        service = savedService;
+        return mapToDTO(service);
+    }
+ 
     @Transactional
     public void checkAndDisableIfBadRatings(Long serviceId) {
-        Long total = ratingRepository.countByServiceId(serviceId);
+        Long total = ratingRepository.countByService_Id(serviceId);
         if (total < MIN_RATINGS_FOR_CHECK) return;
  
         Long badCount = serviceRepository.countBadRatings(serviceId);
@@ -120,11 +147,11 @@ public class ServiceService {
  
     public ServiceResponseDTO mapToDTO(com.app.servicefinder.model.Service s) {
         List<String> photos = photoRepository.findByServiceId(s.getId())
-                .stream().map(ServicePhoto::getPhotoUrl).collect(Collectors.toList());
+                .stream().map(ServicePhoto::getPhotoUrl).toList();
  
         Double avg = serviceRepository.getAverageRating(s.getId());
-        Long total = ratingRepository.countByServiceId(s.getId());
- 
+        Long total = ratingRepository.countByService_Id(s.getId());
+
         return ServiceResponseDTO.builder()
                 .id(s.getId())
                 .title(s.getTitle())
@@ -137,7 +164,7 @@ public class ServiceService {
                 .isAvailable(s.getIsAvailable())
                 .viewsCount(s.getViewsCount())
                 .categoryName(s.getCategory() != null ? s.getCategory().getName() : null)
-                .categoryIcon(s.getCategory() != null ? s.getCategory().getIconUrl() : null)
+                .categoryIcon(s.getCategory() != null ? s.getCategory().getIcon() : null)
                 .provider(UserResponseDTO.builder()
                         .id(s.getUser().getId())
                         .fullName(s.getUser().getFullName())
